--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Botho University Online </title>
+    <title>Botho University  </title>
   </head>
   <body>
     <div id="root"></div>
